Fix the reamin visible before animation starts issue

--- a/css/style.css
+++ b/css/style.css
@@ -192,4 +192,5 @@ body {
 
 .btn-animated {
     animation: moveInBtn .5s ease-out .75s;
+    animation-fill-mode: backwards;
 }
